| Summary: | ASTERISK-28930: ./configure --without-ssl build failure | ||||
| Reporter: | Jaco Kroon (jkroon) | Labels: | |||
| Date Opened: | 2020-06-03 07:21:57 | Date Closed: | 2020-06-25 14:31:58 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | General | ||
| Versions: | 13.34.0 16.10.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Linux. | Attachments: | |||
| Description: | jkroon@plastiekpoot ~/projects/asterisk ((HEAD detached at origin/13)) $ ./configure --without-ssl
... jkroon@plastiekpoot ~/projects/asterisk ((HEAD detached at origin/13)) $ make CC="cc" CXX="g++" LD="" AR="" RANLIB="" CFLAGS="" LDFLAGS="" make -C menuselect CONFIGURE_SILENT="--silent" makeopts make[1]: Entering directory '/home/jkroon/projects/asterisk/menuselect' make[1]: 'makeopts' is up to date. make[1]: Leaving directory '/home/jkroon/projects/asterisk/menuselect' CC="cc" CXX="g++" LD="" AR="" RANLIB="" CFLAGS="" LDFLAGS="" make -C menuselect CONFIGURE_SILENT="--silent" menuselect make[1]: Entering directory '/home/jkroon/projects/asterisk/menuselect' make[1]: 'menuselect' is up to date. make[1]: Leaving directory '/home/jkroon/projects/asterisk/menuselect' Generating input for menuselect ... menuselect/menuselect --check-deps menuselect.makeopts At this point it hangs, 100 % CPU usage. And just hangs there. [130] jkroon@plastiekpoot ~/projects/asterisk ((HEAD detached at origin/13)) $ strace menuselect/menuselect --check-deps menuselect.makeopts ... openat(AT_FDCWD, "build_tools/menuselect-deps", O_RDONLY) = 4 fstat(4, {st_mode=S_IFREG|0644, st_size=947, ...}) = 0 read(4, "ALSA=1:1\nBLUETOOTH=1:1\nCOROSYNC="..., 4096) = 947 read(4, "", 4096) = 0 close(4) = 0 openat(AT_FDCWD, "menuselect.makeopts", O_RDONLY) = 4 fstat(4, {st_mode=S_IFREG|0644, st_size=7581, ...}) = 0 read(4, "MENUSELECT_ADDONS=chan_mobile ch"..., 4096) = 4096 read(4, "T_TESTS=test_app\nMENUSELECT_DEPS"..., 4096) = 3485 read(4, "", 4096) = 0 close(4) = 0 and now it just does the same, no further output on strace. So looks like some infinite loop internally triggered somehow by the lack of SSL. origin/16 results in exactly the same. It just has a tad more output before going off to never never land: menuselect/menuselect --check-deps menuselect.makeopts member 'app_setcallerid' in category 'MENUSELECT_APPS' not found, ignoring. member 'cdr_sqlite' in category 'MENUSELECT_CDR' not found, ignoring. member 'chan_multicast_rtp' in category 'MENUSELECT_CHANNELS' not found, ignoring. member 'func_audiohookinherit' in category 'MENUSELECT_FUNCS' not found, ignoring. member 'res_pjsip_registrar_expire' in category 'MENUSELECT_RES' not found, ignoring. last bit from strace: openat(AT_FDCWD, "menuselect.makeopts", O_RDONLY) = 4 fstat(4, {st_mode=S_IFREG|0644, st_size=7581, ...}) = 0 read(4, "MENUSELECT_ADDONS=chan_mobile ch"..., 4096) = 4096 write(2, "member 'app_setcallerid' in cate"..., 76member 'app_setcallerid' in category 'MENUSELECT_APPS' not found, ignoring. ) = 76 write(2, "member 'cdr_sqlite' in category "..., 70member 'cdr_sqlite' in category 'MENUSELECT_CDR' not found, ignoring. ) = 70 write(2, "member 'chan_multicast_rtp' in c"..., 83member 'chan_multicast_rtp' in category 'MENUSELECT_CHANNELS' not found, ignoring. ) = 83 write(2, "member 'func_audiohookinherit' i"..., 83member 'func_audiohookinherit' in category 'MENUSELECT_FUNCS' not found, ignoring. ) = 83 write(2, "member 'res_pjsip_registrar_expi"..., 86member 'res_pjsip_registrar_expire' in category 'MENUSELECT_RES' not found, ignoring. ) = 86 read(4, "T_TESTS=test_app\nMENUSELECT_DEPS"..., 4096) = 3485 read(4, "", 4096) = 0 close(4) = 0 Using make MENUSELECT_DEBUG=yes may provide some additional information from generated menuselect_debug.txt file: 1115 -Marking MOH-OPSOUND-WAV of MENUSELECT_MOH as present 1127 -Just set MOH-OPSOUND-WAV enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set res_ari_mailboxes enabled to 0 702 -Just set res_mwi_external_ami enabled to 0 702 -Just set res_stasis_mailbox enabled to 0 702 -Just set COMPILE_DOUBLE enabled to 0 702 -Just set G711_REDUCED_BRANCHING enabled to 0 702 -Just set TEST_CODING_TABLES enabled to 0 702 -Just set TEST_TANDEM_TRANSCODING enabled to 0 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 702 -Just set func_aes enabled to 1 That then just keeps going indefinitely. I'm marking this as a regression since I know I used to run --without-ssl as a workaround for some other issues I've had, so I do know that it used to work. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-06-03 07:21:58.971-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-06-25 14:32:00.017-0500 Change 14573 merged by Friendly Automation: menuselect: Resolve infinite loop in dependency scenario. [https://gerrit.asterisk.org/c/asterisk/+/14573|https://gerrit.asterisk.org/c/asterisk/+/14573] By: Friendly Automation (friendly-automation) 2020-06-25 14:37:45.272-0500 Change 14609 merged by Friendly Automation: menuselect: Resolve infinite loop in dependency scenario. [https://gerrit.asterisk.org/c/asterisk/+/14609|https://gerrit.asterisk.org/c/asterisk/+/14609] By: Friendly Automation (friendly-automation) 2020-06-25 14:37:48.840-0500 Change 14608 merged by Friendly Automation: menuselect: Resolve infinite loop in dependency scenario. [https://gerrit.asterisk.org/c/asterisk/+/14608|https://gerrit.asterisk.org/c/asterisk/+/14608] By: Friendly Automation (friendly-automation) 2020-06-25 14:39:08.195-0500 Change 14607 merged by Friendly Automation: menuselect: Resolve infinite loop in dependency scenario. [https://gerrit.asterisk.org/c/asterisk/+/14607|https://gerrit.asterisk.org/c/asterisk/+/14607] | ||||